# SMALify

./: README.md  __init__.py  config.py  download.py  pyproject.toml
smal_model/: smal_basics.py  smal_torch.py
